Uskladio fork sa onim za autentifikaciju