@@ -8,9 +8,10 @@ import com.banka1.user.model.helper.Position;
 import com.banka1.user.repository.EmployeeRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
+import org.springframework.security.crypto.bcrypt.BCrypt;
 import org.springframework.stereotype.Component;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Component
 public class BootstrapData implements CommandLineRunner {
@@ -27,10 +28,14 @@ public class BootstrapData implements CommandLineRunner {
 
         Employee admin = new Employee();
 
+        String rawPassword = "admin";
+        String salt = "salt";
+        String hashedPassword = BCrypt.hashpw(rawPassword + salt, BCrypt.gensalt());
+
         admin.setFirstName("Admin");
         admin.setLastName("Admin");
         admin.setEmail("admin@admin.com");
-        admin.setPassword("admin");
+        admin.setPassword(hashedPassword);
         admin.setIsAdmin(true);
         admin.setPhoneNumber("1234567890");
         admin.setBirthDate("2000-01-01");
@@ -39,10 +44,10 @@ public class BootstrapData implements CommandLineRunner {
         admin.setPosition(Position.DIRECTOR);
         admin.setActive(true);
         admin.setAddress("Admin Address");
-        admin.setSaltPassword("salt");
+        admin.setSaltPassword(salt);
         admin.setUsername("admin123");
 
-        admin.setPermissions(Arrays.asList(Permission.CREATE_EMPLOYEE, Permission.READ_EMPLOYEE));
+        admin.setPermissions(List.of(Permission.CREATE_EMPLOYEE, Permission.READ_EMPLOYEE));
 
         employeeRepository.save(admin);
 
